--- a/_config.yml
+++ b/_config.yml
@@ -20,15 +20,15 @@
 
 title: Blog
 email: hi@example.com
-description: >- # this means to ignore newlines until "baseurl:"
-Hello, this is just a mind spew for some of my researched curiosities through AI and other stuff. 
+description: >- # this means to ignore newlines until "baseurl:" 
+  Hello, this is just a mind spew for some of my researched curiosities through AI and other stuff. 
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://jaydenxsoe.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: jekyllrb
 github_username:  jekyll
 
 # Build settings
-theme: architect
+theme: minima
 plugins:
   - jekyll-feed
 
