--- a/_config.yml
+++ b/_config.yml
@@ -19,13 +19,13 @@
 # in the templates via {{ site.myvariable }}.
 
 title: Blog
-email: hi@example.com
+#email: hi@example.com
 description: >- # this means to ignore newlines until "baseurl:" 
   Hello, this is just a mind spew for some of my researched curiosities through AI and other stuff. 
-baseurl: "" # the subpath of your site, e.g. /blog
+baseurl: "/blog" # the subpath of your site, e.g. /blog
 url: "https://jaydenxsoe.github.io" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+#twitter_username: jekyllrb
+github_username:  JaydenXsoe
 
 # Build settings
 theme: minima
