--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@
 # in the templates via {{ site.myvariable }}.
 
 title: Blog
-root: "/"
+root: /
 email: hi@example.com
 description: >- # this means to ignore newlines until "baseurl:" 
   Hello, this is just a mind spew for some of my researched curiosities through AI and other stuff. 
