--- a/_config.yml
+++ b/_config.yml
@@ -17,10 +17,12 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-
 title: Blog
+author:
+  name: JaydenXsoe
+  email: hi@example.com
+
 root: /
-email: hi@example.com
 description: >- # this means to ignore newlines until "baseurl:" 
   Hello, this is just a mind spew for some of my researched curiosities through AI and other stuff. 
 baseurl: "/" # the subpath of your site, e.g. /blog
@@ -30,8 +32,30 @@ github_username:  JaydenXsoe
 
 # Build settings
 theme: minima
+
+#remote_theme: jekyll/minima
+
 plugins:
   - jekyll-feed
+  - jekyll-seo-tag
+
+# Minima specific settings, which are only available from Minima 3.0 onward.
+minima:
+  # Minima skin selection.
+  # Available skins are:
+  # classic	           Default, light color scheme.
+  # dark	             Dark variant of the classic skin.
+  # auto	             Adaptive skin based on the default classic and dark skins.
+  # solarized-light	   Light variant of solarized color scheme.
+  # solarized-dark	   Dark variant of solarized color scheme.
+  # solarized	         Adaptive skin for solarized color scheme skins.
+  skin: classic
+
+  nav_pages:
+    - title: About
+      url: /about/
+
+
 
 # Exclude from processing.
 # The following items will not be processed, by default.
