--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,6 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 title: Blog
-root: /
 description: >- # this means to ignore newlines until "baseurl:" 
   Hello, this is just a mind spew for some of my researched curiosities through AI and other stuff. 
 baseurl: "/" # the subpath of your site, e.g. /blog
@@ -27,22 +26,22 @@ github_username: JaydenXsoe
 email: hi@example.com
 
 # Build settings
-#theme: minima
+theme: minima
 #remote_theme: jekyll/minima
 
-markdown: kramdown
-permalink: pretty
-
-highlighter: rouge
-kramdown:
-  input: GFM
-  hard_wrap: false
-  gfm_emojis: true
-  latex_headers: section,subsection,subsubsection,paragraph,subparagraph,subparagraph
-  line_width: 72
-  math_engine: mathjax
-  auto_ids: true
-  syntax_highlighter: rouge
+#markdown: kramdown
+#permalink: pretty
+#
+#highlighter: rouge
+#kramdown:
+#  input: GFM
+#  hard_wrap: false
+#  gfm_emojis: true
+#  latex_headers: section,subsection,subsubsection,paragraph,subparagraph,subparagraph
+#  line_width: 72
+#  math_engine: mathjax
+#  auto_ids: true
+#  syntax_highlighter: rouge
 
 plugins:
   - jekyll-feed
@@ -51,7 +50,7 @@ plugins:
 # Minima specific settings, which are only available from Minima 3.0 onward.
 #minima:
 #  # Minima skin selection.
-#  # Available skins are:
+# Available skins are:
 #  # classic	           Default, light color scheme.
 #  # dark	             Dark variant of the classic skin.
 #  # auto	             Adaptive skin based on the default classic and dark skins.
@@ -81,10 +80,10 @@ plugins:
 # * title    Tooltip rendered on hovering over icon.
 # * icon     Font Awesome icon id. `github` corresponds to `fa-github`.
 # * url      Full URL of social profile.
-social_links:
-  - title: JaydenXsoe
-    icon: github
-    url: "https://github.com/JaydenXsoe"
+#social_links:
+#  - title: JaydenXsoe
+#    icon: github
+#    url: "https://github.com/JaydenXsoe"
 #  - title: Jekyll at X (formerly Twitter)
 #    icon: x-twitter
 #    url: "https://x.com/jekyllrb"
