--- a/blog/_config.yml
+++ b/blog/_config.yml
@@ -2,7 +2,7 @@
 title: Blog
 description: "Hello, this is just a mind spew of some of my researched curiosities using AI and other resources."
 baseurl: "/blog"
-url: "http://jaydenxsoe.github.io"
+url: "https://jaydenxsoe.github.io"
 
 # Social settings
 email: ""
